--- a/src/app/core/table.component.html
+++ b/src/app/core/table.component.html
@@ -1,3 +1,20 @@
+<button
+  *ngFor="let category of categories"
+  class="btn btn-secondary"
+  [routerLink]="['/table', category]"
+  routerLinkActive="active"
+>
+  {{ category }}
+</button>
+<button
+  class="btn btn-secondary"
+  routerLink="/"
+  routerLinkActive="active"
+  [routerLinkActiveOptions]="{ exact: true }"
+>
+  All
+</button>
+
 <table class="table table-sm table-bordered table-striped">
   <tr>
     <th>ID</th>
